--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
 body {
-  font-family: Arial, sans-serif;
   background-image: url(totoro2.jpeg);
-  margin: 100px;
-  padding: 0px;
+  background-size: cover;
+  background-size: 92%;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  justify-content: flex-end;
+  height: 100vh;
 }
 
 .container {
