--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   background-color: #6ed2dd;
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 10px red;
 }
 
 form {
